<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_memu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_memu_tag"
            android:title="@string/menu_help" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_memu_help"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_memu_them"
            android:title="@string/menu_theme" />
    </group>


    <item android:title="@string/menu_tag">
        <menu>
            <item
                android:id="@+id/nav_study"
                android:icon="@drawable/ic_memu_set"
                android:title="学习" />
            <item
                android:id="@+id/nav_birth"
                android:icon="@drawable/ic_memu_ques"
                android:title="生日" />
            <item
                android:id="@+id/nav_work"
                android:icon="@drawable/ic_memu_help"
                android:title="工作" />
            <item
                android:id="@+id/nav_vocation"
                android:icon="@drawable/ic_memu_help"
                android:title="节假日" />
            <item
                android:id="@+id/nav_self_def"
                android:icon="@drawable/ic_memu_help"
                android:title="自定义" />
        </menu>
    </item>

</menu>
